Add link to main site

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     
     <dialog class="shadow" id="shareModal">
         <h1>Поделиться</h1>
+
         <form method="dialog">
             <button><p>Закрыть</p></button>
         </form>
@@ -54,7 +55,7 @@
     <canvas id="field"></canvas>
 
     <footer>
-        Project by FieryCup
+        Project by <a href="http://fierycup.github.io">FieryCup</a>
     </footer>
     <script src="js/position.js"></script>
     <script src="js/cell.js"></script>
